--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,21 +17,34 @@
     <string name="search_category_github">GitHub</string>
     <string name="search_category_mvnrepository">MvnRepository</string>
 
-    <string name="action_settings">設定</string>
-    <string name="search_action_title">検索</string>
     <string name="close">閉じる</string>
+    <string name="display">表示</string>
+    <string name="image">画像</string>
+    <string name="cancel">キャンセル</string>
+    <string name="ok">決定</string>
+
+    <string name="search_action_title">検索</string>
+    <string name="action_settings">設定</string>
     <string name="title_calendar">カレンダー</string>
     <string name="title_search">Web 検索</string>
     <string name="title_settings_color">色設定</string>
+    <string name="title_settings_device">端末の設定</string>
+    <string name="title_settings">設定</string>
+    <string name="title_menu">メニュー</string>
+    <string name="title_tools">ツール</string>
+    <string name="title_set_bg">背景画像を設定</string>
+    <string name="title_bg_delete">背景画像を削除</string>
+    <string name="section_title_share">シェア</string>
+    <string name="title_share">このアプリをシェア</string>
+    <string name="title_share_twitter">Twitter でシェア</string>
+
     <string name="title_enable_suggest">検索入力補助を使う</string>
     <string name="title_clear">設定を初期化</string>
     <string name="title_advertisement_1">広</string>
     <string name="title_advertisement_2">告</string>
-    <string name="production_app_admob_id">ca-app-pub-5751262573448755~2546242221</string>
-    <string name="production_banner_unit_id">ca-app-pub-5751262573448755/4022975429</string>
     <string name="title_licenses">ライセンス情報</string>
     <string name="title_app_version">アプリのバージョン: </string>
-    <string name="copyright">(c) @toastkidjp</string>
+
     <string name="settings_color_commit">決定</string>
     <string name="settings_color_reset">戻す</string>
     <string name="settings_color_background_title">背景色</string>
@@ -41,31 +54,27 @@
     <string name="settings_color_delete">削除が完了しました。</string>
     <string name="settings_color_done_commit">色を変更しました。</string>
     <string name="settings_color_done_reset">元に戻しました。</string>
-    <string name="cancel">キャンセル</string>
-    <string name="ok">決定</string>
     <string name="done_clear">完了しました。</string>
+
     <string name="confirm_clear_all_settings">
         <![CDATA[<font color=\"red\">注意：この操作は取り消せません。</font>]]></string>
-    <string name="title_settings_device">端末の設定</string>
-    <string name="title_settings">設定</string>
-    <string name="title_menu">メニュー</string>
-    <string name="title_tools">ツール</string>
+
     <string name="message_share">
         Android アプリ「{0}」\nhttps://play.google.com/store/apps/details?id=jp.toastkid.calendar
     </string>
-    <string name="section_title_share">シェア</string>
-    <string name="title_share">このアプリをシェア</string>
-    <string name="title_share_twitter">Twitter でシェア</string>
 
-    <string name="title_gallery">背景画像を設定</string>
-    <string name="title_bg_delete">背景画像を削除</string>
     <string name="message_failed_read_image">画像の読み込みに失敗しました。</string>
     <string name="message_success_image_removal">画像を削除しました。</string>
     <string name="message_failed_image_removal">画像削除に失敗しました。</string>
     <string name="message_cannot_found_image">画像が設定されていません。</string>
-    <string name="display">表示</string>
-    <string name="image">画像</string>
     <string name="message_done_set_image">選択した画像を背景に設定しました。</string>
+
     <string name="format_date_title">{0}月{1}日</string>
+    <string name="format_date_link">https://ja.wikipedia.org/wiki/{0}月{1}日</string>
+
+    <string name="production_app_admob_id">ca-app-pub-5751262573448755~2546242221</string>
+    <string name="production_banner_unit_id">ca-app-pub-5751262573448755/4022975429</string>
+
+    <string name="copyright">(c) @toastkidjp</string>
 
 </resources>
