--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,4 +77,9 @@
 
     <string name="copyright">(c) @toastkidjp</string>
 
+    <string name="title_background_image_setting">背景画像設定</string>
+    <string name="add_background_image">背景画像を追加</string>
+    <string name="clear_all">背景画像をすべて削除</string>
+    <string name="message_change_background_image">背景画像を変更しました。</string>
+
 </resources>
