--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -23,13 +23,18 @@
     <string name="cancel">Cancel</string>
     <string name="ok">OK</string>
 
-    <string name="search_action_title">Search</string>
+    <string name="title_search_action">Search</string>
     <string name="action_settings">Settings</string>
     <string name="title_calendar">Calendar</string>
     <string name="title_search">Web Search</string>
+    <string name="title_section_settings_this_app">This apps settings</string>
     <string name="title_settings_color">Color Settings</string>
     <string name="title_settings_device">Device Settings</string>
-    <string name="title_settings">App Setting</string>
+    <string name="title_settings">App Settings</string>
+    <string name="title_section_device_settings">Device Settings</string>
+    <string name="title_settings_wifi">Wi-Fi Settings</string>
+    <string name="title_settings_wireless">Wireless Settings</string>
+    <string name="title_settings_all_apps">All Apps settings</string>
     <string name="title_menu">Menu</string>
     <string name="title_tools">Tools</string>
     <string name="title_set_bg">Set Background Image</string>
@@ -81,5 +86,6 @@
     <string name="message_change_background_image">It has changed background image.</string>
     <string name="title_background_image_setting">Background Image Setting</string>
     <string name="message_reset_bg_image">It has reset background image.</string>
+    <string name="title_tweet_action">Tweet</string>
 
 </resources>
