--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -88,7 +88,7 @@
     <string name="title_background_image_setting">Background Image Setting</string>
     <string name="message_reset_bg_image">It has reset background image.</string>
     <string name="title_tweet_action">Tweet</string>
-    <string name="production_interstitial_ad_id">ca-app-pub-5751262573448755/4067211023</string>
+    <string name="unit_id_interstitial">ca-app-pub-5751262573448755/4067211023</string>
     <string name="title_ad">Ad</string>
     <string name="title_loading_ad">Loading...</string>
     <string name="thank_you_for_using">Thank you for using!</string>
@@ -97,5 +97,8 @@
     <string name="message_about_this_app">
         If you tap any date, you could show historic event of this day.
     </string>
+    <string name="unit_id_native_large_ad">ca-app-pub-5751262573448755/2699725828</string>
+    <string name="message_done_load_ad">It has done loading AD!</string>
+    <string name="message_failed_ad_loading">It failed to load AD...</string>
 
 </resources>
