--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,7 +84,7 @@
     <string name="message_reset_bg_image">背景画像を解除しました。</string>
     <string name="title_settings_wifi">Wi-Fi の設定</string>
     <string name="title_settings_wireless">無線の設定</string>
-    <string name="title_settings_all_apps">アプリの設定</string>
+    <string name="title_settings_all_apps">アプリ設定</string>
     <string name="title_section_settings_this_app">このアプリの設定</string>
     <string name="title_section_device_settings">端末の設定</string>
     <string name="title_tweet_action">Tweet する</string>
