Implement google play's link.

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -104,5 +104,6 @@
     <string name="done_addition">It has done addition!</string>
     <string name="message_add_recommended_colors">Would you like to add recommended colors?</string>
     <string name="title_add_random">Random</string>
+    <string name="title_go_google_play">Link to Google Play</string>
 
 </resources>
