--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -105,5 +105,6 @@
     <string name="done_addition">追加しました。</string>
     <string name="message_add_recommended_colors">おすすめの色を追加します。</string>
     <string name="title_add_random">ランダム</string>
+    <string name="title_go_google_play">Google Play で見る</string>
 
 </resources>
