--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -105,5 +105,6 @@
     <string name="message_add_recommended_colors">Would you like to add recommended colors?</string>
     <string name="title_add_random">Random</string>
     <string name="title_go_google_play">Link to Google Play</string>
+    <string name="section_title_about_this_app">This app\'s informations</string>
 
 </resources>
