--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -106,5 +106,6 @@
     <string name="title_add_random">Random</string>
     <string name="title_go_google_play">Link to Google Play</string>
     <string name="section_title_about_this_app">This app\'s informations</string>
-
+    <string name="privacy_policy">Privacy policy</string>
+    <string name="link_privacy_policy">https://tmblr.co/ZDG7Be2NVdctY</string>
 </resources>
