--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -108,4 +108,5 @@
     <string name="section_title_about_this_app">This app\'s informations</string>
     <string name="privacy_policy">Privacy policy</string>
     <string name="link_privacy_policy">https://tmblr.co/ZDG7Be2NVdctY</string>
+    <string name="message_please_view_ad">Please could you bear to see interstitial ad...</string>
 </resources>
