--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -109,4 +109,5 @@
     <string name="section_title_about_this_app">このアプリの情報</string>
     <string name="privacy_policy">プライバシーポリシー</string>
     <string name="link_privacy_policy">https://tmblr.co/ZDG7Be2NVdctY</string>
+    <string name="message_please_view_ad">インタースティシャル広告をご覧ください。</string>
 </resources>
