--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -109,4 +109,5 @@
     <string name="privacy_policy">Privacy policy</string>
     <string name="link_privacy_policy">https://tmblr.co/ZDG7Be2NVdctY</string>
     <string name="message_please_view_ad">Please could you bear to see interstitial ad...</string>
+    <string name="app_widget_name_search">Web Search App-Widget</string>
 </resources>
