--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -110,4 +110,5 @@
     <string name="privacy_policy">プライバシーポリシー</string>
     <string name="link_privacy_policy">https://tmblr.co/ZDG7Be2NVdctY</string>
     <string name="message_please_view_ad">インタースティシャル広告をご覧ください。</string>
+    <string name="app_widget_name_search">Web 検索ウィジェット</string>
 </resources>
