--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -111,4 +111,8 @@
     <string name="link_privacy_policy">https://tmblr.co/ZDG7Be2NVdctY</string>
     <string name="message_please_view_ad">インタースティシャル広告をご覧ください。</string>
     <string name="app_widget_name_search">Web 検索ウィジェット</string>
+    <string name="title_daily_notification">毎朝8時に通知</string>
+    <string name="subtext_notification">その日何があった？</string>
+    <string name="message_set_daily_alarm">毎朝8時の通知をセットしました。</string>
+    <string name="message_clear_daily_alarm">通知設定を解除しました。</string>
 </resources>
