--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -115,4 +115,7 @@
     <string name="message_set_daily_alarm">It has set daily alarm.</string>
     <string name="message_clear_daily_alarm">It has canceled daily alarm.</string>
     <string name="title_settings_date_and_time">Date and Time Settings</string>
+    <string name="title_apps_launcher">Apps Launcher</string>
+    <string name="message_failed_launching">It cannot launch this app.</string>
+    <string name="date_format">E, MM/dd/yyyy HH:mm:ss</string>
 </resources>
