Implement filter and background in Launcher.

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -118,4 +118,5 @@
     <string name="title_apps_launcher">Apps Launcher</string>
     <string name="message_failed_launching">It cannot launch this app.</string>
     <string name="date_format">E, MM/dd/yyyy HH:mm:ss</string>
+    <string name="title_package_name_filter">Package name filter</string>
 </resources>
