--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -120,4 +120,6 @@
     <string name="message_failed_launching">このアプリは起動できません。</string>
     <string name="date_format">yyyy/MM/dd(E) HH:mm:ss</string>
     <string name="title_package_name_filter">パッケージ名でフィルタ</string>
+    <string name="top_mark">↑</string>
+    <string name="bottom_mark">↓</string>
 </resources>
