--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -8,7 +8,8 @@
     <string name="search_category_image">Image</string>
     <string name="search_category_map">Map</string>
     <string name="search_category_apps">Apps</string>
-    <string name="search_category_twitter">SNS</string>
+    <string name="search_category_twitter">Twitter</string>
+    <string name="search_category_instagram">Instagram</string>
     <string name="search_category_youtube">Video</string>
     <string name="search_category_wikipedia">Wikipedia</string>
     <string name="search_category_shopping">Shopping</string>
