--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,8 @@
     <string name="search_category_image">画像</string>
     <string name="search_category_map">地図</string>
     <string name="search_category_apps">アプリ</string>
-    <string name="search_category_twitter">SNS</string>
+    <string name="search_category_twitter">Twitter</string>
+    <string name="search_category_instagram">Instagram</string>
     <string name="search_category_youtube">動画</string>
     <string name="search_category_wikipedia">Wikipedia</string>
     <string name="search_category_shopping">ショッピング</string>
