--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -123,4 +123,12 @@
     <string name="title_package_name_filter">パッケージ名でフィルタ</string>
     <string name="top_mark">↑</string>
     <string name="bottom_mark">↓</string>
+    <string name="title_delete_all">すべて削除</string>
+    <string name="title_add">追加</string>
+    <string name="category">検索種別</string>
+    <string name="word">キーワード</string>
+    <string name="favorite_search_addition_dialog_empty_message">キーワードを入力してください。</string>
+    <string name="favorite_search_addition_successful_format">{0} をお気に入りに追加しました。</string>
+    <string name="title_favorite_search">お気に入り検索</string>
+    <string name="title_adding_favorite_search">お気に入り検索に追加</string>
 </resources>
