--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -132,4 +132,5 @@
     <string name="favorite_search_addition_successful_format">It has been insert "{0}" to "Favorite search word".</string>
     <string name="title_favorite_search">Favorite Search</string>
     <string name="title_adding_favorite_search">Add Favorite Search</string>
+    <string name="exit">Exit</string>
 </resources>
