--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -133,4 +133,5 @@
     <string name="title_favorite_search">お気に入り検索</string>
     <string name="title_adding_favorite_search">お気に入り検索に追加</string>
     <string name="exit">終了</string>
+    <string name="format_message_done_adding_favorite_search">「%s」をお気に入り検索に追加しました。</string>
 </resources>
